--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>BtJs Buổi 5</title>
+    <title>JS Function</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -24,27 +24,231 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- gg font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="./img/Screenshot 2023-06-14 211522.png" type="image/x-icon">
+    <!-- my CSS  -->
+  <link rel="stylesheet" href="./css/index.css">
+  <main>
+    <div class="container py-5">
+        <div class="card w-75 mx-auto">
+            <div class="bg_card d-none d-lg-block"></div>
+            <div class="card-body position-relative">
+                <div class="row">
+                    <div class="col-12 col-md-4 col-lg-3 col-xl-2 nav-tabs nav flex-md-column nav-pills"
+                        id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                        <!-- button bt1  -->
+                        <button class="nav-link bt_tab mb-2 active " id="v-pills-home-tab" data-bs-toggle="pill"
+                            data-bs-target="#bai1" type="button" role="tab" aria-controls="v-pills-home"
+                            aria-selected="true">Bài 1</button>
+                            <!-- button bt2 -->
+                        <button class="nav-link bt_tab mb-2" id="v-pills-profile-tab" data-bs-toggle="pill"
+                            data-bs-target="#bai2" type="button" role="tab" aria-controls="v-pills-profile"
+                            aria-selected="false">Bài 2</button>
+                            <!-- button bt3 -->
+                        <button class="nav-link bt_tab mb-2" id="v-pills-profile-tab" data-bs-toggle="pill"
+                            data-bs-target="#bai3" type="button" role="tab" aria-controls="v-pills-profile"
+                            aria-selected="false">Bài 3</button>
+                            <!-- button bt4 -->
+                        <button class="nav-link bt_tab mb-2" id="v-pills-profile-tab" data-bs-toggle="pill"
+                            data-bs-target="#bai4" type="button" role="tab" aria-controls="v-pills-profile"
+                            aria-selected="false">Bài 4</button>
+                    </div>
+                    <div class="col-12 col-md-8 col-lg-9 col-xl-10 tab-content" id="v-pills-tabContent">
+                        <div class=" note callout callout-warning">
+                            <i class="fa fa-exclamation text-danger fs-5 me-2"></i>
+                            <p class="d-inline "> <b>Đây chỉ là gợi ý nên người làm có thể làm khác gợi ý, miễn đúng theo yêu cầu trong file đề bài</b> </p>
+                        </div>
+                        <!-- bài tập 1  -->
+                        <div class="tab-pane py-4 fade show active" id="bai1" role="tabpanel"
+                            aria-labelledby="v-pills-home-tab">
+                            <!-- các icon sử dung emoji https://emojipedia.org/ research trên google-->
+                            <h4 > <span class="fs-2 ms-3">🏫</span> Quản lí tuyển sinh</h4>
+                            <div class=" note callout callout-info ms-3">
+                                <p><span class="fs-5">💡</span><b>Gợi ý:</b>
+                                    <details>
+                                        <summary>Mở rộng để xem thêm</summary>
+                                        <ul>
+                                            <li>Điểm chuẩn của hội đồng các bạn tự nhập thêm.Điểm chuẩn của 3 môn thường tối đa 30đ.Nên có thể lấy các điểm chuẩn như sau: 30,25,29</li>
+                                            <li> Ô nhập khu vực, đối tượng có thể tạo bằng input, dropdown hoặc radio.
+                                                Nếu không thuộc khu vực hoặc đối tượng trong danh sách thì điểm khu vực và điểm đối tượng sẽ là 0</li>
+                                            <li>Nếu có 1 trong 3 môn bị điểm 0 thì lặp tức cho rớt không cần kiểm tra tổng điểm có lớn hơn hoặc bằng điểm chuẩn hay không</li>
+                                        </ul>
+                                    </details>
+                                </p>
+                            </div>
+                            <form class="row gy-3 align-items-center px-2">
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip" id="point"
+                                        placeholder="Điểm chuẩn">
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <select class="form-control form_ip" name="">
+                                        <option value="0">Chọn khu vực</option>
+                                        <option value="2">A</option>
+                                        <option value="1">B</option>
+                                        <option value="0.5">C</option>
+                                    </select>
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <select class="form-control form_ip" name="">
+                                        <option value="0">Chọn đối tượng</option>
+                                        <option value="2.5">1</option>
+                                        <option value="1.5">2</option>
+                                        <option value="1">3</option>
+                                    </select>
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip" id="point1"
+                                        placeholder="Điểm môn thứ 1">
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip" id="point2"
+                                        placeholder="Điểm môn thứ 2 ">
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip" id="point3"
+                                        placeholder="Điểm môn thứ 3">
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn bt_feature me-1 mb-1" type="button" >Kết quả</button>
+                                </div>
+                                <div class="alert alert-success" role="alert">
+                                   <span class="fs-5">👉</span>
+                                    <span ></span>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- bài tập 2  -->
+                        <div class="tab-pane py-4 fade" id="bai2" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                            <h4 > <span class="ms-3 fs-2">🔋</span> Tính tiền điện </h4>
+                            <div class="note callout callout-info ms-3">
+                                <p><span class="fs-5">💡</span><b>Gợi ý:</b>
+                              <details>
+                                <summary>Mở rộng để xem thêm</summary>
+                                <p>Cách tính tiền điện gần giống với bài tính tiền Grab trên lớp</p>
+                                <img src="./img/Bai2.JPG" alt="imgbt2" class="img-fluid">
+                              </details>
+                               
+                                </p>
+                            </div>
+                            <form class="row gy-3 align-items-center px-2 bai2">
+                                <div class="col-12 col-lg-4">
+                                    <input type="text" class="form-control form_ip" id="fullName"
+                                        placeholder="Nhập họ tên">
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip" id="kw"
+                                        placeholder="Nhập số KW">
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn bt_feature me-1 mb-1" type="button" >Tính tiền điện </button>
+                                </div>
+                                <div class="alert alert-success" role="alert">
+                                 <span class="fs-5">👉</span><span id="average"></span>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- bài tập 3 -->
+                        <div class="tab-pane py-4 fade" id="bai3" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                            <h4 > <span class="ms-3 fs-2">💰</span> Tính thuế thu nhập cá nhân</h4>
+                            <div class=" note callout callout-info ms-3">
+                                <p><span class="fs-5">💡</span><b>Gợi ý:</b>
+                                  <details>
+                                    <summary>Mở rộng để xem thêm</summary>
+                                    <ul>
+                                        <li>Tổng thu nhập năm các bạn tự nhập thêm. Giả sử 1 tháng thu nhập 10tr thì 1 năm sẽ là 10 x 12 = 120tr => các bạn sẽ nhập 120000000</li>
+                                        <li>Demo hiện tại đang tính % thuế theo điều kiện mà thu nhập chịu thuế rơi vào. Vd: thu nhập chịu thuế là 110tr thì tính 10% của 110tr => 110tr * 0.1</li>
+                                        <li>Do đề bài không ghi rõ yêu cầu tính thuế nên cũng có thể tính theo cách chia ra từng đoạn thuế giống bài tính tiền grab. Vd: 110tr => 60tr *0.05 + (110tr-60tr) * 0.1</li>
+                                        <li>Sử dụng input có type number thì khi nhập 120000000, có thể nhập ngắn gọn thành 120e+6</li>
+                                        <li>Đối với các con số hàng triệu có nhiều số 0, có thể viết ngắn gọn trong code như sau:
+                                            4tr => 4000000 => 4e+6</li>
+                                        <li>Dùng NumberFormat để số tiền hiển thị đẹp hơn: <span> <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/NumberFormat">NumberFormat</a></span> </li>
+                                    </ul>
+                                  </details>
+                                </p>
+                            </div>
+                            <form class="row gy-3 align-items-center px-2">
+                                <div class="col-12 col-lg-4">
+                                    <input type="text" class="form-control form_ip" id="name"
+                                         placeholder="Nhập họ tên ">
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip" id="income"
+                                         placeholder="Tổng thu nhập năm ">
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip" id="dependent"
+                                         placeholder="Số người phụ thuộc ">
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn bt_feature me-1 mb-1" type="button">Tính tiền thuế</button>
+                                </div>
+                                <div class="alert alert-success" role="alert">
+                                 <span class="fs-5">👉</span><span ></span>
+                                </div>
+                            </form>
+                        </div>
+                        <!-- bài tậ p4  -->
+                        <div class="tab-pane py-4 fade" id="bai4" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                            <h4 > <span class="fs-2 ms-3">🕸️</span>Tính tiền cáp</h4>
+                            <div class="note callout callout-info ms-3">
+                                <p><span class="fs-5">💡</span><b>Gợi ý:</b>
+                                  <details>
+                                    <summary>Mở rộng để xem thêm</summary>
+                                    <ul>
+                                        <li>Sử dụng event onchange của dropdown để xử lý ẩn hiện cho ô nhập số kết nối khi chọn loại khách hàng: <a href="https://www.w3schools.com/jsref/event_onchange.asp"> Onchange</a></li>
+                                        <li>Đối với loại khách hàng Doanh Nghiệp, tổng 10 kết nối đầu là 75$
+                                            => đây là giá trọn gói, nếu doanh nghiệp lắp đặt số kết nối nhỏ hơn 10 thì vẫn phải đóng 75$.
+                                            Vd: 6 kết nối thì vẫn sẽ cộng 75$ vào tổng tiền.
+                                            => Nếu lắp trên 10 kết nối thì kết nối thứ 11 trở đi sẽ tính 5$/kết nối.</li>
+                                    </ul>
+                                  </details>
+                                </p>
+                            </div>
+                            <form class="row gy-3 align-items-center px-2">
+                                <div class="col-12 col-lg-4">
+                                 <select  id="select" class="form-control form_ip">
+                                    <option value="">Chọn loại khách hàng</option>
+                                    <option value="user">Nhà Dân</option>
+                                    <option value="business">Doanh Nghiệp</option>
+                                 </select>
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="text" class="form-control form_ip"
+                                        placeholder="Nhập mã khách hàng">
+                                </div>
+                                <div class="col-12 col-lg-4">
+                                    <input type="number" class="form-control form_ip"
+                                        placeholder="Số Kênh Cao Cấp">
+                                </div>
+                                <div class="col-12">
+                                    <button class="btn bt_feature me-1 mb-1" type="button" >Tính Tiền Cáp</button>
+                                </div>
+                                <div class="alert alert-success d-flex" role="alert">
+                                 <span class="fs-5">👉</span>
+                                  <div class="d-flex " id="titleCal">
+                                  </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
 
-    <!-- (Optional) Use CSS or JS implementation -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"
-      integrity="sha512-naukR7I+Nk6gp7p5TMA4ycgfxaZBJ7MO5iC3Fp6ySQyKFHOGfpkSZkYVWV5R7u7cfAicxanwYQ5D1e17EfJcMA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-
-    <link rel="stylesheet" href="./css/index.css" />
-  </head>
-
-  <body>
-    <main></main>
+</footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
       crossorigin="anonymous"
     ></script>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
       integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
