--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
                                 <p>Cách tính tiền điện gần giống với bài tính tiền Grab trên lớp</p>
                                 <img src="./img/Bai2.JPG" alt="imgbt2" class="img-fluid">
                               </details>
-                               
                                 </p>
                             </div>
                             <form class="row gy-3 align-items-center px-2 bai2">
@@ -144,10 +143,10 @@
                                         placeholder="Nhập số KW">
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn bt_feature me-1 mb-1" type="button" >Tính tiền điện </button>
+                                    <button class="btn bt_feature me-1 mb-1" type="button" onclick="electricBill()" >Tính tiền điện </button>
                                 </div>
                                 <div class="alert alert-success" role="alert">
-                                 <span class="fs-5">👉</span><span id="average"></span>
+                                 <span class="fs-5">👉</span><span id="electricBill"></span>
                                 </div>
                             </form>
                         </div>
