fix function bt

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <div class="col-12">
                                     <button class="btn bt_feature me-1 mb-1" type="button" onclick="electricBill()" >Tính tiền điện </button>
                                 </div>
-                                <div class="alert alert-success" role="alert">
+                                <div class="alert alert-success" role="alert" id="divBill">
                                  <span class="fs-5">👉</span><span id="electricBill"></span>
                                 </div>
                             </form>
