add function bt3

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                                          placeholder="Số người phụ thuộc ">
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn bt_feature me-1 mb-1" type="button">Tính tiền thuế</button>
+                                    <button class="btn bt_feature me-1 mb-1" type="button" onclick="taxes()">Tính tiền thuế</button>
                                 </div>
-                                <div class="alert alert-success" role="alert">
-                                 <span class="fs-5">👉</span><span ></span>
+                                <div class="alert alert-success" role="alert" >
+                                 <span class="fs-5">👉</span><span id="oPut"></span>
                                 </div>
                             </form>
                         </div>
