--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
                                         placeholder="Số kết nối">
                                 </div>
                                 <div class="col-12">
-                                    <button class="btn bt_feature me-1 mb-1" type="button" >Tính Tiền Cáp</button>
+                                    <button class="btn bt_feature me-1 mb-1" type="button" onclick="paidCable()" >Tính Tiền Cáp</button>
                                 </div>
                                 <div class="alert alert-success d-flex" role="alert">
                                  <span class="fs-5">👉</span>
-                                  <div class="d-flex " id="">
+                                  <div class="d-flex " id="paidCable">
                                   </div>
                                 </div>
                             </form>
