add comment code

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <!-- my CSS  -->
   <link rel="stylesheet" href="./css/index.css">
   <main>
+
+    <!-- giao diện tương tự như bài trước,nên đã số là tái sử dụng,khac ở chỗ có tìm hiểu thêm được các emoji từ thư viện -->
     <div class="container py-5">
         <div class="card w-75 mx-auto">
             <div class="bg_card d-none d-lg-block"></div>
