--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="./img/Screenshot 2023-06-14 211522.png" type="image/x-icon">
     <!-- my CSS  -->
   <link rel="stylesheet" href="./css/index.css">
   <main>
@@ -211,7 +210,7 @@
                             </div>
                             <form class="row gy-3 align-items-center px-2">
                                 <div class="col-12 col-lg-4">
-                                 <select  id="select" class="form-control form_ip" onclick="onChange()" >
+                                 <select  id="select" class="form-control form_ip" onclick="onChange()">
                                     <option value="">Chọn loại khách hàng</option>
                                     <option value="1">Nhà Dân</option>
                                     <option value="2">Doanh Nghiệp</option>
@@ -226,7 +225,7 @@
                                         placeholder="Số Kênh Cao Cấp"> 
                                 </div>
                                 <div class="col-12 col-lg-4" >
-                                    <input type="number" id="hidden" class="form-control form_ip"
+                                    <input type="number" id="hidden"  class="form-control form_ip " style="display: none;"
                                         placeholder="Số kết nối">
                                 </div>
                                 <div class="col-12">
